Correct Interupt handling and improve oracle evaluation